update card-stat component

--- a/src/app/modules/dashboard/components/card-stat/card-stat.component.html
+++ b/src/app/modules/dashboard/components/card-stat/card-stat.component.html
@@ -1,8 +1,10 @@
 <div class="card card-stats mb-4 mb-xl-0" [style.height]="height">
     <div class="card-body">
-        <div class="metric-container">
+        <div class="metric-container" [ngClass]="{ 'with-icon': stat.icon, 'with-submetric' : stat.subMetricTitle}">
             <div class="metric-data">
-                <h4 class="card-title text-uppercase text-muted mb-0">{{ stat.metricTitle }}</h4>
+                <!-- <h4 class="card-title text-uppercase text-muted mb-0">{{ stat.metricTitle }}</h4> -->
+                <p class="card-title text-uppercase text-muted mb-0"
+                    [ngClass]="{'h4': !smallHeader, 'h5': smallHeader}">{{ stat.metricTitle }}</p>
                 <!-- content -->
                 <ng-container *ngIf="!loader">
                     <ng-container [ngSwitch]="stat.metricFormat">
@@ -12,8 +14,11 @@
                         <span *ngSwitchCase="'decimals'" class="h3 font-weight-bold mb-0">
                             {{ stat.metricValue | number : '1.2-2' }}
                         </span>
-                        <span *ngSwitchDefault class="h3 font-weight-bold mb-0">
+                        <span *ngSwitchCase="'integer'" class="h3 font-weight-bold mb-0">
                             {{ stat.metricValue | number : '1.0-0' }}
+                        </span>
+                        <span *ngSwitchDefault class="h3 font-weight-bold mb-0">
+                            {{ stat.metricValue }}
                         </span>
                     </ng-container>
                     <span class="h3 font-weight-bold mb-0">{{ stat.metricSymbol }}</span>
@@ -24,29 +29,33 @@
                     <div class="bar-loader"></div>
                 </ng-container>
             </div>
-            <div class="metric-icon">
+            <div class="metric-icon" *ngIf="stat.icon">
                 <div class="icon icon-shape text-white rounded-circle shadow" [style.background-color]="stat.iconBg">
                     <i [ngClass]="stat.icon"></i>
                 </div>
             </div>
         </div>
         <div class="submetric-container text-muted" *ngIf="stat.subMetricTitle">
-            <div class="submetric-data">
-                <span class="text-nowrap h5 mr-2 text-muted text-uppercase"><b>{{ stat.subMetricTitle }}</b></span>
+            <div class="submetric-data my-0 h5">
+                <!-- <span class="text-nowrap h5 mr-2 text-muted text-uppercase"><b>{{ stat.subMetricTitle }}</b></span> -->
+                <span class="text-nowrap mr-2 text-muted text-uppercase">{{ stat.subMetricTitle }}</span>
                 <!-- content -->
                 <ng-container *ngIf="!loader">
                     <ng-container [ngSwitch]="stat.subMetricFormat">
-                        <span *ngSwitchCase="'percentage'">
+                        <span *ngSwitchCase="'percentage'" class="text-muted">
                             {{ stat.subMetricValue | number : '1.2-2' }}%
                         </span>
-                        <span *ngSwitchCase="'decimals'">
+                        <span *ngSwitchCase="'decimals'" class="text-muted">
                             {{ stat.subMetricValue | number : '1.2-2' }}
                         </span>
-                        <span *ngSwitchDefault>
+                        <span *ngSwitchCase="'integer'" class="text-muted">
                             {{ stat.subMetricValue | number : '1.0-0' }}
                         </span>
+                        <span *ngSwitchDefault class="text-muted">
+                            {{ stat.subMetricValue }}
+                        </span>
                     </ng-container>
-                    <span>{{ stat.subMetricSymbol }}</span>
+                    <span class="text-muted">{{ stat.subMetricSymbol }}</span>
                 </ng-container>
 
                 <!-- loader -->
