add card header style in styles.scss file

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -348,3 +348,7 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
   justify-content: center;
   align-items: center;
 }
+
+.card .card-header {
+  padding: 0.5rem 1.5rem;
+}
