--- a/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
+++ b/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
@@ -1,3 +1,4 @@
+<!-- TARJETAS DE MÉTRICAS -->
 <div class="row mt-5">
     <div *ngFor="let stat of kpis" class="col-12 col-md-6 col-lg-4 col-xl-2 mb-xl-4"
         [ngClass]="{'offset-xl-8' : stat.metricName === 'transactions' }">
@@ -5,7 +6,7 @@
     </div>
 </div>
 
-
+<!-- USUARIOS AND REVENUE -->
 <div class="row mt-5">
     <div class="col-12">
         <div class="pills-container">
@@ -38,10 +39,9 @@
         </div>
     </div>
 </div>
-
 <hr>
 
-
+<!-- CHATS POR PAÍS, RETAILER & CATEGORIA -->
 <div class="row mt-5">
     <div class="col-12">
         <div class="mb-3">
@@ -63,38 +63,38 @@
         </div>
     </div>
 
-    <!-- CHATS POR PAÍS, RETAILER & CATEGORIA -->
     <div class="col-12 col-lg-4 mt-4">
-        <div class="card">
+        <div class="card height-fluid">
             <div class="card-header">
-                <span class="h4">Chats por país</span>
+                <span class="h4">{{ selectedTab2 === 1 ? 'Tráfico' : 'Conversiones' }} por país</span>
             </div>
             <div class="card-body">
                 <app-chart-bar-horizontal [data]="chatsByCountry" name="omnichat-chats-by-country" category="country"
-                    value="chats" [showCategoryInToolip]="true" [singleColorBars]="true">
+                    value="chats" [singleColorBars]="true">
                 </app-chart-bar-horizontal>
             </div>
         </div>
     </div>
     <div class="col-12 col-lg-4 mt-4">
-        <div class="card">
+        <div class="card height-fluid superimposed">
             <div class="card-header">
-                <span class="h4">Chats por retailer</span>
+                <span class="h4">{{ selectedTab2 === 1 ? 'Tráfico' : 'Conversiones' }} por retailer</span>
             </div>
-            <div class="card-body">
-                <div class="retailers-chart-container">
+            <div class="card-body retailers-chart-container">
+                <div class="superimposed">
                     <app-chart-bar-horizontal [data]="chatsByRetailer" name="omnichat-chats-by-retailer"
-                        category="retailer" value="chats" height="600px" [showCategoryInToolip]="true"
-                        [singleColorBars]="true">
+                        category="retailer" value="chats" [truncateLabels]="true" [singleColorBars]="true"
+                        height="600px">
                     </app-chart-bar-horizontal>
                 </div>
+
             </div>
         </div>
     </div>
     <div class="col-12 col-lg-4 mt-4">
         <div class="card height-fluid">
             <div class="card-header">
-                <span class="h4">Chats por categoría</span>
+                <span class="h4">{{ selectedTab2 === 1 ? 'Tráfico' : 'Conversiones' }} por categoría</span>
             </div>
             <div class="card-body">
                 <app-chart-pie [data]="chatsByCategories" name="omnichat-chats-by-category" legendPosition="bottom">
@@ -103,8 +103,8 @@
         </div>
     </div>
 </div>
-
 <hr>
+
 <!-- CONVERSIONES - TASAS DE CONVERSION -->
 <div class="row mt-5">
     <div class="col-12">
@@ -174,146 +174,142 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
 
-<hr>
-<!-- CATEGORY AND USERS TABLE -->
-<div class="row mt-5">
-    <div class="col-12">
-        <div class="adaptable-container" [ngClass]="{'auto': categoryAndUsersReqStatus === 3}">
-            <div class="loading-shade" [hidden]="categoryAndUsersReqStatus > 1">
-                <mat-spinner></mat-spinner>
+            <!-- CATEGORY AND USERS TABLE -->
+            <div class="col-12 mt-4">
+                <div class="adaptable-container" [ngClass]="{'auto': categoryAndUsersReqStatus === 3}">
+                    <div class="loading-shade" [hidden]="categoryAndUsersReqStatus > 1">
+                        <mat-spinner></mat-spinner>
+                    </div>
+
+                    <table mat-table [dataSource]="categoryAndUsersSource">
+                        <!-- category column -->
+                        <ng-container matColumnDef="category">
+                            <th mat-header-cell *matHeaderCellDef>Categoría</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.category }}
+                            </td>
+                        </ng-container>
+
+                        <!-- users column -->
+                        <ng-container matColumnDef="users">
+                            <th mat-header-cell *matHeaderCellDef>Usuarios</th>
+                            <td mat-cell *matCellDef="let element">
+                                <span>{{ element.users | number }}</span>
+                            </td>
+                        </ng-container>
+
+                        <!-- conversion_rate -->
+                        <ng-container matColumnDef="conversion_rate">
+                            <th mat-header-cell *matHeaderCellDef>Tasa de conversión</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.conversion_rate }}%
+                            </td>
+                        </ng-container>
+
+                        <!-- conversion_rate_yoy -->
+                        <ng-container matColumnDef="conversion_rate_yoy">
+                            <th mat-header-cell *matHeaderCellDef>%YoY</th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="value-container">
+                                    <span>{{ element.conversion_rate_yoy }}%</span>
+                                    <i class="fas fa-arrow-up text-success" *ngIf="element.conversion_rate_yoy > 0"></i>
+                                    <i class="fas fa-equals text-warning" *ngIf="element.conversion_rate_yoy === 0"></i>
+                                    <i class="fas fa-arrow-down text-danger"
+                                        *ngIf="element.conversion_rate_yoy < 0"></i>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <!-- amount -->
+                        <ng-container matColumnDef="amount">
+                            <th mat-header-cell *matHeaderCellDef>Cantidad</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.amount | number }}
+                            </td>
+                        </ng-container>
+
+                        <!-- amount_yoy -->
+                        <ng-container matColumnDef="amount_yoy">
+                            <th mat-header-cell *matHeaderCellDef>%YoY</th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="value-container">
+                                    <span>{{ element.amount_yoy }}%</span>
+                                    <i class="fas fa-arrow-up text-success" *ngIf="element.amount_yoy > 0"></i>
+                                    <i class="fas fa-equals text-warning" *ngIf="element.amount_yoy === 0"></i>
+                                    <i class="fas fa-arrow-down text-danger" *ngIf="element.amount_yoy < 0"></i>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <!-- revenue -->
+                        <ng-container matColumnDef="revenue">
+                            <th mat-header-cell *matHeaderCellDef>Revenue</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.revenue | number }}
+                            </td>
+                        </ng-container>
+
+                        <!-- revenue_yoy -->
+                        <ng-container matColumnDef="revenue_yoy">
+                            <th mat-header-cell *matHeaderCellDef>%YoY</th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="value-container">
+                                    <span>{{ element.revenue_yoy }}%</span>
+                                    <i class="fas fa-arrow-up text-success" *ngIf="element.revenue_yoy > 0"></i>
+                                    <i class="fas fa-equals text-warning" *ngIf="element.revenue_yoy === 0"></i>
+                                    <i class="fas fa-arrow-down text-danger" *ngIf="element.revenue_yoy < 0"></i>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <!-- aup -->
+                        <ng-container matColumnDef="aup">
+                            <th mat-header-cell *matHeaderCellDef>AUP</th>
+                            <td mat-cell *matCellDef="let element">
+                                {{ element.aup | number }}
+                            </td>
+                        </ng-container>
+
+                        <!-- aup_yoy -->
+                        <ng-container matColumnDef="aup_yoy">
+                            <th mat-header-cell *matHeaderCellDef>%YoY</th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="value-container">
+                                    <span>{{ element.aup_yoy }}%</span>
+                                    <i class="fas fa-arrow-up text-success" *ngIf="element.aup_yoy > 0"></i>
+                                    <i class="fas fa-equals text-warning" *ngIf="element.aup_yoy === 0"></i>
+                                    <i class="fas fa-arrow-down text-danger" *ngIf="element.aup_yoy < 0"></i>
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <!-- ERROR COLUMN -->
+                        <ng-container matColumnDef="disclaimer">
+                            <td mat-footer-cell *matFooterCellDef colspan="3">
+                                <div class="text-danger text-center" [hidden]="categoryAndUsersReqStatus !== 3">
+                                    Ocurrió un error al consultar los productos
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="categoryAndUsersColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: categoryAndUsersColumns;"></tr>
+                        <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
+                            [hidden]="categoryAndUsersReqStatus !== 3"></tr>
+                    </table>
+                </div>
             </div>
-
-            <table mat-table [dataSource]="categoryAndUsersSource">
-                <!-- category column -->
-                <ng-container matColumnDef="category">
-                    <th mat-header-cell *matHeaderCellDef>Categoría</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.category }}
-                    </td>
-                </ng-container>
-
-                <!-- users column -->
-                <ng-container matColumnDef="users">
-                    <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                    <td mat-cell *matCellDef="let element">
-                        <span>{{ element.users | number }}</span>
-                    </td>
-                </ng-container>
-
-                <!-- conversion_rate -->
-                <ng-container matColumnDef="conversion_rate">
-                    <th mat-header-cell *matHeaderCellDef>Tasa de conversión</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.conversion_rate }}%
-                    </td>
-                </ng-container>
-
-                <!-- conversion_rate_yoy -->
-                <ng-container matColumnDef="conversion_rate_yoy">
-                    <th mat-header-cell *matHeaderCellDef>%YoY</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="value-container">
-                            <span>{{ element.conversion_rate_yoy }}%</span>
-                            <i class="fas fa-arrow-up text-success" *ngIf="element.conversion_rate_yoy > 0"></i>
-                            <i class="fas fa-equals text-warning" *ngIf="element.conversion_rate_yoy === 0"></i>
-                            <i class="fas fa-arrow-down text-danger" *ngIf="element.conversion_rate_yoy < 0"></i>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <!-- amount -->
-                <ng-container matColumnDef="amount">
-                    <th mat-header-cell *matHeaderCellDef>Cantidad</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.amount | number }}
-                    </td>
-                </ng-container>
-
-                <!-- amount_yoy -->
-                <ng-container matColumnDef="amount_yoy">
-                    <th mat-header-cell *matHeaderCellDef>%YoY</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="value-container">
-                            <span>{{ element.amount_yoy }}%</span>
-                            <i class="fas fa-arrow-up text-success" *ngIf="element.amount_yoy > 0"></i>
-                            <i class="fas fa-equals text-warning" *ngIf="element.amount_yoy === 0"></i>
-                            <i class="fas fa-arrow-down text-danger" *ngIf="element.amount_yoy < 0"></i>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <!-- revenue -->
-                <ng-container matColumnDef="revenue">
-                    <th mat-header-cell *matHeaderCellDef>Revenue</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.revenue | number }}
-                    </td>
-                </ng-container>
-
-                <!-- revenue_yoy -->
-                <ng-container matColumnDef="revenue_yoy">
-                    <th mat-header-cell *matHeaderCellDef>%YoY</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="value-container">
-                            <span>{{ element.revenue_yoy }}%</span>
-                            <i class="fas fa-arrow-up text-success" *ngIf="element.revenue_yoy > 0"></i>
-                            <i class="fas fa-equals text-warning" *ngIf="element.revenue_yoy === 0"></i>
-                            <i class="fas fa-arrow-down text-danger" *ngIf="element.revenue_yoy < 0"></i>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <!-- aup -->
-                <ng-container matColumnDef="aup">
-                    <th mat-header-cell *matHeaderCellDef>AUP</th>
-                    <td mat-cell *matCellDef="let element">
-                        {{ element.aup | number }}
-                    </td>
-                </ng-container>
-
-                <!-- aup_yoy -->
-                <ng-container matColumnDef="aup_yoy">
-                    <th mat-header-cell *matHeaderCellDef>%YoY</th>
-                    <td mat-cell *matCellDef="let element">
-                        <div class="value-container">
-                            <span>{{ element.aup_yoy }}%</span>
-                            <i class="fas fa-arrow-up text-success" *ngIf="element.aup_yoy > 0"></i>
-                            <i class="fas fa-equals text-warning" *ngIf="element.aup_yoy === 0"></i>
-                            <i class="fas fa-arrow-down text-danger" *ngIf="element.aup_yoy < 0"></i>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <!-- ERROR COLUMN -->
-                <ng-container matColumnDef="disclaimer">
-                    <td mat-footer-cell *matFooterCellDef colspan="3">
-                        <div class="text-danger text-center" [hidden]="categoryAndUsersReqStatus !== 3">
-                            Ocurrió un error al consultar los productos
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="categoryAndUsersColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: categoryAndUsersColumns;"></tr>
-                <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
-                    [hidden]="categoryAndUsersReqStatus !== 3"></tr>
-            </table>
         </div>
     </div>
 </div>
-
 <hr>
 
+<!-- TRAFFICO Y CONVERSIONES (7 GRAFICOS) -->
 <div class="row mt-5">
     <div class="col-12">
         <span class="h3">Audiencia</span>
     </div>
-
-    <!-- TRAFFICO Y CONVERSIONES (7 GRAFICOS) -->
     <div class="col-12 mt-3">
         <div class="row">
             <div class="col-12">
@@ -452,8 +448,8 @@
         </div>
     </div>
 </div>
-
 <hr>
+
 <!-- HISTORICO DE CHATS -->
 <div class="row mt-5">
     <div class="col-12 mb-3">
