fix period copy in general-filters component

--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -110,7 +110,7 @@
         <!-- period -->
         <div class="col-12 col-sm-6 mb-4" [ngClass]="{'col-lg-3' : !isLatamSelected, 'col-lg-2' : isLatamSelected}">
             <div class="date-picker">
-                <span class="mb-1 h4">Periodo</span>
+                <span class="mb-1 h4">Período</span>
                 <mat-form-field appearance="fill">
                     <mat-date-range-input [rangePicker]="picker">
                         <input matStartDate formControlName="startDate" placeholder="Fecha inicio">
