--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -298,53 +298,10 @@
 
                     </div>
                     <div class="card-body">
-                        <div class="adaptable-container" [ngClass]="{'auto': topProductsReqStatus === 3}">
-                            <div class="loading-shade" [hidden]="topProductsReqStatus > 1">
-                                <mat-spinner></mat-spinner>
-                            </div>
-
-                            <table mat-table [dataSource]="topProductsSource">
-                                <!-- category column -->
-                                <ng-container matColumnDef="rank">
-                                    <th mat-header-cell *matHeaderCellDef [style.width.px]="150">Rank</th>
-                                    <td mat-cell *matCellDef="let element">
-                                        {{element.rank}} </td>
-                                </ng-container>
-
-                                <!-- product column -->
-                                <ng-container matColumnDef="product">
-                                    <th mat-header-cell *matHeaderCellDef>Producto </th>
-                                    <td mat-cell *matCellDef="let element">
-                                        <!-- <span #tooltip="matTooltip" md-raised-button [matTooltip]="element.product"
-                                            matTooltipPosition="right" matTooltipClass="custom-tooltip">
-                                            {{element.product}}
-                                        </span> -->
-                                        <span>{{element.product}}</span>
-                                    </td>
-                                </ng-container>
-
-                                <!-- amount -->
-                                <ng-container matColumnDef="amount">
-                                    <th mat-header-cell *matHeaderCellDef [style.width.px]="150">Cantidad</th>
-                                    <td mat-cell *matCellDef="let element">
-                                        {{element.amount}} </td>
-                                </ng-container>
-
-                                <!-- ERROR COLUMN -->
-                                <ng-container matColumnDef="disclaimer">
-                                    <td mat-footer-cell *matFooterCellDef colspan="3">
-                                        <div class="text-danger text-center" [hidden]="topProductsReqStatus !== 3">
-                                            Ocurrió un error al consultar los productos
-                                        </div>
-                                    </td>
-                                </ng-container>
-
-                                <tr mat-header-row *matHeaderRowDef="topProductsColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: topProductsColumns;"></tr>
-                                <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
-                                    [hidden]="topProductsReqStatus !== 3"></tr>
-                            </table>
-                        </div>
+                        <app-generic-table [displayedColumns]="topProductsColumns" [tableData]="topProducts"
+                            [tableDataChange]="topProducts.data" errorMsg="Error al consultar productos"
+                            emptyDataMsg="No se encontraron productos">
+                        </app-generic-table>
                     </div>
                 </div>
             </div>
