--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -174,6 +174,6 @@
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 4">
-        <app-google-business></app-google-business>
+        <app-google-business-wrapper [requestInfoChange]="requestInfoChange$"></app-google-business-wrapper>
     </ng-container>
 </div>
